force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/vlocity_ps__ServiceProviderSite__c.object-meta.xml
<CustomObject>
    <label>Business Location</label>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>