force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/fields/vlocity_ps__BusinessHourRecordId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BusinessHourRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Provider_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>