force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/fields/vlocity_ps__City__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>