force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/fields/vlocity_ps__Country__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>