force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/fields/vlocity_ps__Locationlatlong__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Locationlatlong__c</fullName>
    <label>Location</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>