force-app/main/default/objects/vlocity_ps__ServiceProviderSite__c/fields/vlocity_ps__ServiceProviderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceProviderId__c</fullName>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Provider_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>